<resources>
    <string name="app_name">Animation Application</string>
    <string name="blink">BLINK</string>
    <string name="clockwise">ROTATE</string>
    <string name="fade">FADE</string>
    <string name="move">MOVE</string>
    <string name="slide">SLIDE</string>
    <string name="zoomin">ZOOM IN</string>
    <string name="zoomout">ZOOM OUT</string>
    <string name="stop_animation">STOP ANIMATION</string>
</resources>